<resources>
    <string name="app_name">Centsible</string>
<!--    activity_login-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

<!--    activity_onboarding-->
    <string name="swipe_to_continue">Swipe to continue</string>
    <string name="get_started">Get Started</string>
    <string name="back">Back</string>

<!--    activity_signUp-->
    <string name="logo">Logo</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_to_start_tracking_your_finances">Sign up to start tracking your finances</string>
    <string name="full_name">Full Name</string>
    <string name="emailSignUp">Email</string>
    <string name="passwordSignUp">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_of_service_and_privacy_policy">I agree to the Terms of Service and Privacy Policy</string>
    <string name="create_accountSignUp">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="topwave">topWave</string>

    <!--    dialog_feedback-->
    <string name="we_value_your_feedback">We Value Your Feedback</string>
    <string name="enter_your_feedback">Enter your feedback</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>

    <!--    dialog_view_all_transaction-->
    <string name="full_category_analysis">Full Category Analysis</string>
    <string name="close">Close</string>

<!--    fragment_add_transaction.xml-->
    <string name="add_transaction">Add Transaction</string>
    <string name="select_category">Select Category</string>
    <string name="common_icon">🏷️</string>
    <string name="selected_category">Selected Category</string>
    <string name="transaction_title">Transaction Title</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="save_transaction">Save Transaction</string>

<!--    fragment_analytics.xml-->
    <string name="analytics">Analytics</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="custom">Custom</string>
    <string name="spending_by_category">Spending by Category</string>
    <string name="category_breakdown">Category Breakdown</string>
    <string name="view_all">View All</string>

<!--    fragment_backup_restore.xml-->
    <string name="settings_amp_backup"><![CDATA[Settings & Backup]]></string>
    <string name="notifications">Notifications</string>
    <string name="budget_alert">Budget Alert</string>
    <string name="get_notified_when_you_re_close_to_your_budget_limit">Get notified when you\'re close to your budget limit</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="receive_daily_reminders_to_track_your_expenses">Receive daily reminders to track your expenses</string>
    <string name="currency">Currency</string>
    <string name="data_management">Data Management</string>
    <string name="keep_your_data_safe_by_creating_regular_backups_you_can_restore_your_data_anytime">Keep your data safe by creating regular backups. You can restore your data anytime.</string>
    <string name="backup_data">Backup Data</string>
    <string name="restore_data">Restore Data</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="logout">Logout</string>
    <string name="export_as_excel">Export as Excel\n</string>

<!--    fragment_budget_update.xml-->
    <string name="budget_amount">Budget Amount</string>
    <string name="enter_budget_amount">Enter budget amount</string>
    <string name="set_monthly_budget">Set Monthly Budget</string>
    <string name="info_icon">Info icon</string>
    <string name="tip_set_a_realistic_budget_based_on_your_average_monthly_expenses_to_better_track_your_financial_health">Tip: Set a realistic budget based on your average monthly expenses to better track your financial health.</string>
    <string name="save_budget">Save Budget</string>

<!--    fragment_records.xml-->
    <string name="monthly_budget_lkr0">Monthly Budget: LKR0</string>
    <string name="tap_to_update">Tap to update</string>
    <string name="status">Status</string>
    <string name="good">Good</string>
    <string name="this_month">This month</string>
    <string name="lkr0_lkr0">LKR0 / LKR0</string>
    <string name="view_all_Main">View All</string>

<!--    item_category.xml-->
    <string name="_10_food">🍔\nFood</string>
    <string name="category">Category</string>
    <string name="total_lkr0">Total: LKR0</string>

<!--    item_onboarding.xml-->
    <string name="onboarding_img">Onboarding_img</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

<!--    item_transaction.xml-->
    <string name="tran_icon">🍔</string>
    <string name="category_emoji">Category Emoji</string>
    <string name="summary_goes_here">Summary goes here</string>
    <string name="lkr_0">LKR 0</string>
    <string name="delete_transaction">Delete Transaction</string>

<!--    transaction_detail_bottom(used to edit)-->
    <string name="edit_transaction">Edit Transaction</string>
    <string name="save_changes">Save Changes</string>
    <string name="update_transaction">Update Transaction</string>


</resources>